--- a/report/2018-03-07 21_14_06testReport.html
+++ b/report/2018-03-07 21_14_06testReport.html
@@ -189,9 +189,9 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>自动化测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2018-01-28 11:05:38</p>
-<p class='attribute'><strong>Duration:</strong> 0:01:27.290000</p>
-<p class='attribute'><strong>Status:</strong> Pass 3</p>
+<p class='attribute'><strong>Start Time:</strong> 2018-03-07 21:14:06</p>
+<p class='attribute'><strong>Duration:</strong> 0:02:18.267000</p>
+<p class='attribute'><strong>Status:</strong> Pass 2</p>
 
 <p class='description'></p>
 </div>
@@ -222,7 +222,7 @@ function showOutput(id, name) {
 </tr>
 
 <tr class='passClass'>
-    <td>test_baidu.BaiduTest</td>
+    <td>test_login.LoginTest</td>
     <td>1</td>
     <td>1</td>
     <td>0</td>
@@ -231,17 +231,17 @@ function showOutput(id, name) {
 </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_baidu_so: 验证：测试百度搜索</div></td>
+    <td class='none'><div class='testcase'>test_login: 验证：登录成功</div></td>
     <td colspan='5' align='center'>pass</td>
 </tr>
 
 <tr class='passClass'>
-    <td>test_login.LoginTest</td>
-    <td>2</td>
-    <td>2</td>
+    <td>test_shopHu.LoginTest</td>
+    <td>1</td>
+    <td>1</td>
     <td>0</td>
     <td>0</td>
-    <td><a href="javascript:showClassDetail('c2',2)">Detail</a></td>
+    <td><a href="javascript:showClassDetail('c2',1)">Detail</a></td>
 </tr>
 
 <tr id='pt2.1' class='hiddenRow'>
@@ -249,15 +249,10 @@ function showOutput(id, name) {
     <td colspan='5' align='center'>pass</td>
 </tr>
 
-<tr id='pt2.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login: 验证：登录成功</div></td>
-    <td colspan='5' align='center'>pass</td>
-</tr>
-
 <tr id='total_row'>
     <td>Total</td>
-    <td>3</td>
-    <td>3</td>
+    <td>2</td>
+    <td>2</td>
     <td>0</td>
     <td>0</td>
     <td>&nbsp;</td>
